# Snake

./: CMakeLists.txt  README.md  sfml-app  snake.cpp
include/: Direction.hpp  Renderer.hpp  collisions.hpp  fruit.hpp  game.hpp  snake.hpp  vector.hpp
src/: Renderer.cpp  collisions.cpp  collisions.hpp  fruit.cpp  fruit.hpp  game.cpp  main.cpp  snake.cpp  snake.hpp  vector.cpp  vector.hpp
